[package]
name = "tanya"
version = "0.1.0"
edition = "2021"



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
borsh = "*"


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]